Fix close icon overlap

--- a/src/style.css
+++ b/src/style.css
@@ -268,6 +268,10 @@
   animation: progress var(--sn-notify-autoclose-timeout) linear forwards;
 }
 
+.sn-notify-content {
+  padding-right: calc(var(--sn-notify-close-icon-size) + 2px);
+}
+
 @keyframes progress {
   to {
     width: 0%;
